gcc/testsuite/rust/rustc/ui/macros/issue-83340.rs
//@ check-fail

fn main() {
    println!(
        "\
\n {} │", // { dg-error "" "" { target *-*-* } }
    );
}

